# reeree

./: .gitignore  CLAUDE.md  COST.md  IMPLEMENTATION.md  LICENSE  POC_PLAN.md  PROFIT.md  PROJECT_PLAN.md  README.md  REVENUE.md  VALUES.md  pyproject.toml
docs/: GASTOWN_COMPARISON.md  README.md  claude-code-gap-analysis.md  keyboard-shortcuts.md
docs/strategic/decisions/: ADR-001-unix-domain-socket.md  ADR-002-textual-tui.md  ADR-003-plan-as-markdown.md  ADR-004-openai-compatible-api.md  ADR-005-git-per-step-undo.md  ADR-006-focused-context.md  ADR-007-orchestrator-llm.md  ADR-008-propagate-cohere.md  ADR-009-plugin-architecture.md  ADR-010-inter-daemon-communication.md  (+4 more)
reeree/: __init__.py  claude_backend.py  cli.py  config.py  context.py  daemon_executor.py  daemon_registry.py  executor.py  llm.py  machine_tasks.py  message_bus.py  plan.py  planner.py  plugin.py  router.py  session.py  task_discovery.py  voice.py  worker.py
reeree/tui/: __init__.py  app.py  daemon_tree.py  setup_screen.py
sandbox/: README.md  app.py  cli.py  config.py  links.json  scraper.py  style.css  utils.py
sandbox/tests/: test_app.py  test_scraper.py
scripts/: sandbox-droplet.sh
tests/: conftest.py  test_claude_backend.py  test_cli.py  test_config.py  test_context.py  test_daemon_executor.py  test_daemon_registry.py  test_executor.py  test_integration.py  test_llm.py  test_machine_tasks.py  test_message_bus.py  test_plan.py  test_plugin.py  test_router.py  test_session.py  test_setup.py  test_task_discovery.py  test_tui.py  test_unimplemented.py  test_workflows.py
