[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "reeree"
version = "0.1.0"
description = "High-bandwidth, tight-steering LLM coding tool"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "rich>=13.0",
    "click>=8.1",
    "gitpython>=3.1",
    "textual>=0.80",
]

[project.scripts]
reeree = "reeree.cli:main"

[tool.setuptools.packages.find]
include = ["reeree*"]
